<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:contentDescription="@string/app_icon"
        android:src="@drawable/homeland_logo" />

    <LinearLayout
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageViewLogo"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">


        <com.homeland.android.homeland.views.TextViewRobotoLight
            android:id="@+id/textViewAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:drawableLeft="@drawable/ic_pin_gray"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_pin_gray"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/address_"
            android:textColor="@color/gray"
            android:textSize="@dimen/textSizeNormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <com.homeland.android.homeland.views.TextViewRobotoLight
            android:id="@+id/textViewPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_phone_gray"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_phone_gray"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/phone_"
            android:textColor="@color/gray"
            android:textSize="@dimen/textSizeNormal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/gray" />

        <com.homeland.android.homeland.views.TextViewRobotoLight
            android:id="@+id/textViewEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_email_gray_stroke"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_email_gray_stroke"
            android:lines="1"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/email_"
            android:textColor="@color/gray"
            android:textSize="@dimen/textSizeNormal" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutSocial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="40dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewFacebook"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/facebook_link"
            android:src="@drawable/facebook_links" />

        <ImageView
            android:id="@+id/imageViewTwitter"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/facebook_link"
            android:src="@drawable/twitter_links" />

        <ImageView
            android:id="@+id/imageViewInstagram"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_margin="20dp"
            android:contentDescription="@string/facebook_link"
            android:src="@drawable/instagram_links" />

    </LinearLayout>


</RelativeLayout>
