<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:weightSum="1">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="25dp"
        android:paddingEnd="25dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingStart="25dp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="54dp"
            android:contentDescription="@string/app_icon"
            android:src="@drawable/homeland_logo" />

        <com.homeland.android.homeland.views.TextViewRobotoRegular
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/who_we_are"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.homeland.android.homeland.views.TextViewRobotoRegular
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textSize="@dimen/textSizeSmall" />

        <com.homeland.android.homeland.views.TextViewRobotoRegular
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="@string/our_mission"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <com.homeland.android.homeland.views.TextViewRobotoRegular
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="19dp"
            android:gravity="center"
            android:text=""
            android:textSize="@dimen/textSizeSmall" />
    </RelativeLayout>
</ScrollView>