<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/imageViewSave"
        android:layout_width="20dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="15dp"
        android:contentDescription="@string/save_icon"
        android:src="@drawable/ic_save" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/toolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v4.view.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <com.homeland.android.homeland.views.PagerSlidingTabStrip
                android:id="@+id/pagerSlidingTabStrip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewPager"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="5dp"
                android:minHeight="10dp"
                android:minWidth="30dp"
                android:tag="sw320dp" />

            <com.homeland.android.homeland.views.TextViewRobotoRegular
                android:id="@+id/textViewPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="20dp"
                android:background="@color/blue60"
                android:gravity="center"
                android:lines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="15dp"
                android:paddingLeft="20dp"
                android:paddingRight="15dp"
                android:paddingStart="20dp"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeXSmall"
                tools:ignore="RelativeOverlap"
                tools:text="@string/price" />

            <com.homeland.android.homeland.views.TextViewRobotoRegular
                android:id="@+id/textViewCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/relativeLayout1"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:background="@drawable/red"
                android:gravity="center"
                android:lines="1"
                android:paddingBottom="10dp"
                android:paddingEnd="20dp"
                android:paddingLeft="15dp"
                android:paddingRight="20dp"
                android:paddingStart="15dp"
                android:paddingTop="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/textSizeXSmall"
                tools:text="@string/property_code" />


            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/viewPager"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/white">


                <com.homeland.android.homeland.views.TextViewRobotoRegular
                    android:id="@+id/textViewTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:ellipsize="end"
                    android:gravity="start|top"
                    android:maxLines="2"
                    android:textColor="@color/grayDark"
                    android:textSize="@dimen/textSizeLarge"
                    tools:text="@string/title" />

                <com.homeland.android.homeland.views.TextViewRobotoLight
                    android:id="@+id/textViewDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/textViewTitle"
                    android:layout_marginBottom="5dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="5dp"
                    android:ellipsize="end"
                    android:padding="5dp"
                    android:textColor="@color/grayDark"
                    android:textSize="@dimen/textSizeLarge"
                    tools:text="@string/description" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/relativeLayout1"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:background="@color/white">

                <com.homeland.android.homeland.views.TextViewRobotoRegular
                    android:id="@+id/textViewTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_margin="10dp"
                    android:ellipsize="end"
                    android:gravity="start|top"
                    android:maxLines="2"
                    android:text="@string/for_more_info"
                    android:textColor="@color/grayDark"
                    android:textSize="@dimen/textSizeLarge" />

                <LinearLayout
                    android:id="@+id/LinearLayoutSocial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textViewTitle2"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imageViewFacebook"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:contentDescription="@string/facebook_link"
                        android:src="@drawable/facebook_links" />

                    <ImageView
                        android:id="@+id/imageViewTwitter"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:contentDescription="@string/facebook_link"
                        android:src="@drawable/twitter_links" />

                    <ImageView
                        android:id="@+id/imageViewInstagram"
                        android:layout_width="60dp"
                        android:layout_height="60dp"
                        android:layout_margin="20dp"
                        android:contentDescription="@string/facebook_link"
                        android:src="@drawable/instagram_links" />

                </LinearLayout>

                <com.homeland.android.homeland.views.TextViewRobotoRegular
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/LinearLayoutSocial"
                    android:layout_centerHorizontal="true"
                    android:ellipsize="end"
                    android:gravity="start|top"
                    android:maxLines="2"
                    android:text="@string/or"
                    android:textColor="@color/grayDark"
                    android:textSize="@dimen/textSizeLarge" />


                <com.homeland.android.homeland.views.ButtonRobotoRegular
                    android:id="@+id/buttonCall"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/textView"
                    android:layout_centerHorizontal="true"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="40dp"
                    android:autoLink="phone"
                    android:background="@drawable/selector_background_button"
                    android:drawableLeft="@drawable/customer_service"
                    android:drawablePadding="20dp"
                    android:drawableStart="@drawable/customer_service"
                    android:padding="10dp"
                    android:text="@string/call_customer_service"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/textSizeSmall" />

            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111" />

    <RelativeLayout
        android:id="@+id/relativeLayoutLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:background="@color/blackTransparent"
        android:clickable="true"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="true" />
    </RelativeLayout>

</RelativeLayout>
